[tool.poetry]
name = "rae_dle"
version = "0.1.0"
description = ""
authors = ["Pedro Sanchez <pedrosanchez757@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.yapf]
based_on_style = "facebook"
indent_width = 2
continuation_indent_width = 2
split_all_top_level_comma_separated_values = true
